force-app/main/default/objects/Power_Supply__c/Power_Supply__c.object-meta.xml
<CustomObject>
    <label>Power Supply</label>
    <nameField>
        <label>Serial Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Power Supplies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>