force-app/main/default/objects/Power_Supply__c/fields/asset__c.field-meta.xml
<CustomField>
    <fullName>asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Power Supplies</relationshipLabel>
    <relationshipName>Power_Supplies</relationshipName>
    <type>Lookup</type>
</CustomField>