force-app/main/default/objects/Power_Supply__c/fields/original_manufacturing_date__c.field-meta.xml
<CustomField>
    <fullName>original_manufacturing_date__c</fullName>
    <inlineHelpText>This field captures the date and time the asset was 1st manufactured</inlineHelpText>
    <label>Original Manufacturing Date</label>
    <type>DateTime</type>
</CustomField>