force-app/main/default/objects/Power_Supply__c/fields/revision__c.field-meta.xml
<CustomField>
    <fullName>revision__c</fullName>
    <label>Revision</label>
    <length>80</length>
    <type>Text</type>
</CustomField>