force-app/main/default/objects/Power_Supply__c/validationRules/Serial_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Serial_Number</fullName>
    <active>true</active>
    <errorConditionFormula>Name != serial_number__c</errorConditionFormula>
    <errorMessage>Serial Number must match Name</errorMessage>
</ValidationRule>